Add Navbar menu

--- a/doing-test-style.css
+++ b/doing-test-style.css
@@ -1,6 +1,7 @@
 @import url('loading-screen.css');
 @import url('solar-system-bg.css');
 @import url('common.css');
+@import url('navbar-menu.css');
 
 body, html {
     margin: 0;
