--- a/index-style.css
+++ b/index-style.css
@@ -1,6 +1,7 @@
 @import url('app-footer.css');
 @import url('loading-screen.css');
 @import url('solar-system-bg.css');
+@import url('navbar-menu.css');
 
 body, html {
     margin: 0;
