--- a/manage-question.css
+++ b/manage-question.css
@@ -40,7 +40,7 @@ body {
     background-color: rgba(238, 255, 238, 0.9);
     border: 1px solid #1f1f1f;
     border-radius: 10px;
-    max-height: 100vh;
+    max-height: 102vh;
     position: relative;
     color: white;
     box-shadow: 20px 20px rgba(0, 0, 0, .15);
@@ -232,7 +232,7 @@ a:hover, a:focus {
 
 .navbar-test a:nth-child(1),
 .navbar-test a:nth-child(2),
-.navbar-test a:nth-child(3){
+.navbar-test a:nth-child(3) {
     width: calc(100% / 3);
 }
 
@@ -242,7 +242,7 @@ a:hover, a:focus {
     background-color: #9CDBA6;
 }
 
-.navbar-test a:nth-child(2):hover~ .animation {
+.navbar-test a:nth-child(2):hover ~ .animation {
     width: calc(100% / 3);
     left: calc(100% / 3);
     background-color: #50B498;
@@ -252,4 +252,67 @@ a:hover, a:focus {
     width: calc(100% / 3);
     left: calc(100% / 3 * 2);
     background-color: #468585;
+}
+
+.my-search form {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: all 0.5s;
+    width: 3em;
+    height: 3em;
+    border-radius: 4px;
+    border: 4px solid rgba(0, 0, 0, 0);
+}
+
+.my-search input {
+    position: absolute;
+    width: 0;
+    height: 100%;
+    line-height: 100%;
+    outline: 0;
+    border: 0;
+    font-size: 1em;
+    border-radius: 20px;
+    padding: 0 20px;
+}
+
+.my-search .fa {
+    box-sizing: border-box;
+    padding: 10px;
+    width: 43px;
+    height: 43px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    border-radius: 20px;
+    color: #07051a;
+    text-align: center;
+    font-size: 1.2em;
+    transition: all 1s;
+}
+
+.my-search form:focus-within,
+.my-search form:hover,
+.my-search form:valid {
+    width: 100%;
+    cursor: pointer;
+}
+
+.my-search form:hover input,
+.my-search form:focus-within input,
+.my-search form:valid input {
+    width: 100%;
+}
+
+.my-search form:hover .fa,
+.my-search form:focus-within .fa,
+.my-search form:valid .fa {
+    background: #07051a;
+    color: white;
+}
+
+.my-search form:valid button {
+    display: block;
 }
